--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>My Weather App</title>
 </head>
 <body>
   <div id="content"></div>
